--- a/SR04.md
+++ b/SR04.md
@@ -9,7 +9,7 @@
 
 
 
-![](D:\QQ_File\MARKDOWN（笔记什么的）\linkPic\sr04\20191027151225210.jpg)
+![](\linkPic\20191027151225210.jpg)
 
 - 这个东西的数据手册很简单，网上能找到的工作流程就是这样
 
