--- a/SR04.md
+++ b/SR04.md
@@ -30,17 +30,17 @@
 
 ## CubeMX配置
 
-![](linkPic\sr1.png)
+![](linkPic/sr1.png)
 
 配置Echo引脚为GPIO中断类型并打开中断，Trig为GPIO输出类型用于发送启动信号
 
-![](linkPic\sr2.png)
+![](linkPic/sr2.png)
 
 记得打开中断QAQ，还有设置GPIO中断为上升下降沿都触发，默认两个引脚都pull down即可
 
-![](linkPic\sr3.png)
+![](linkPic/sr3.png)
 
-![](linkPic\sr4.png)
+![](linkPic/sr4.png)
 
 还需要打开定时器，设置分频为840-1之后，相当于计数频率达到10万Hz，所以**持续秒数**=cnt/100000；
 
@@ -122,6 +122,6 @@ UART_printf(&huart1,"%.2fm\n",rawCNT/100000.0*340/2);
 
 结果：
 
-![](linkPic\sr05.png)
+![](linkPic/sr05.png)
 
 将手挡在传感器上，如果是结果如上图那就说明正确
